--- a/02_Create_Dictionary_Based_Sentiment_Analyzer.ipynb
+++ b/02_Create_Dictionary_Based_Sentiment_Analyzer.ipynb
@@ -1489,7 +1489,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist, bin_edges = np.histogram(review_sentiments,density=True) "
+    "hist, bin_edges = np.histogram(review_sentiments,density=True)\n",
+    "labels = list(zip(bin_edges, bin_edges[1:]))\n"
    ]
   },
   {
@@ -1498,7 +1499,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = list(zip(bin_edges, bin_edges[1:]))\n",
     "labels = [(str(e[0]), str(e[1])) for e in labels]\n",
     "labels = [\" \".join(e) for e in labels]"
    ]
